# harness-tap

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-02-harness-tap-full-rename.md  2026-07-02-harness-tap-implementation.md
docs/superpowers/specs/: 2026-07-02-harness-tap-design.md  2026-07-02-harness-tap-rename-design.md
harness_tap/: __init__.py  __main__.py  cli.py  headers.py  proxy.py  sse.py  store.py  viewer.py
tests/: test_cli.py  test_proxy.py  test_sse.py  test_store.py  test_viewer.py
