[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-tap"
version = "0.1.0"
description = "Trace OpenAI Chat Completions traffic from configurable harnesses through a local reverse proxy."
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.scripts]
harness-tap = "harness_tap.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
